# guion_druid_shell

./: Cargo.toml
examples/: 7gui_01_counter.rs  7gui_01_counter_viewed.rs  7gui_02_temperature.rs  7gui_text_undo_redo.rs  fake_text.rs  textbox.rs  zero.rs  zero_viewed.rs
src/: lib.rs
src/app/: mod.rs  queue.rs  render.rs
src/app/event/: handle.rs  mod.rs
src/app/window/: handle.rs  mod.rs
src/app/windows/: mod.rs
src/ctx/: mod.rs
src/ctx/queue/: mod.rs
src/ctx/state/: mod.rs
src/event/: key.rs
src/example/: ctx.rs  env.rs  mod.rs  valid.rs
src/render/: imp.rs  mod.rs
src/render_old/: imp.rs  mod.rs
src/style/: color.rs  cursor.rs  font.rs  mod.rs  selector.rs
