[package]
name = "guion_druid_shell"
version = "0.1.0"
authors = ["qwertz19281 <dellen903@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
guion = { git = "https://github.com/FerionVE/guion", rev = "5a5f88fb" }
#guion = { path = "../guion" }
druid-shell = { git = "https://github.com/linebender/druid", rev = "c02452dd" }
#druid-shell = { git = "https://github.com/linebender/druid", rev = "c02452dd", default-features = false, features = ["x11"] }

[profile.release]
codegen-units = 1
lto = true
